# gilbert-elliot-model

./: .gitignore  .zenodo.json  GitHubRepoPublicReleaseApproval.md  LICENSE.md  README.md  pyproject.toml
gilbert_elliot_model/: __init__.py  gilbert_elliot.py  symbolic_solutions.py
tests/: Fixed_Parameter_README.md  README.md  determine_model_four_param.csv  determine_model_tests.ipynb  determine_model_three_param.csv  determine_model_two_param.csv  distribution_analysis.ipynb  distribution_tests.py  four_param_distributions_fixed_values.csv  four_param_distributions_random_errors.csv  test_errors.py  test_symbolic.py  three_param_distributions_fixed_values.csv  three_param_distributions_random_errors.csv  two_param_distributions_fixed_values.csv  two_param_distributions_random_errors.csv
